# bios-repairer

./: .gitignore  BIOS_FLASH_REPORT.md  CHANGELOG.md  README.md  README.txt  bios_flash.py  bios_heal.py  codecov.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: conftest.py  test_cli.py  test_dmi.py  test_ffsv2.py  test_flashrom.py  test_heal.py  test_heal_flash_chain.py  test_json_report.py  test_padding.py  test_parse_fd.py  test_similarity.py  test_smoke.py  test_verify.py
